[package]
name = "mm1-level-to-img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
mm1-level-parser = { git="https://github.com/arfrie22/mm1-level-parser.git", branch="main" }
tar = "0.4.40"
zstd = "0.13.1"
flate2 = { version = "1.0" }
csv = "1.3.0"
indicatif = "0.17.8"
