[package]
name = "mm1-level-to-img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "from_img"
path = "src/bin/from_img/main.rs"

[[bin]]
name = "to_img"
path = "src/bin/to_img/main.rs"

[lib]
name = "mm1_level_to_img"
path = "src/lib/lib.rs"

[dependencies]
image = "0.25.1"
mm1-level-parser = { git="https://github.com/arfrie22/mm1-level-parser.git", branch="main" }
random_word = { version = "0.4.3", features = ["en"] }
tar = "0.4.40"
zstd = "0.13.1"
flate2 = { version = "1.0" }
csv = "1.3.0"
indicatif = "0.17.8"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
